--- a/style.css
+++ b/style.css
@@ -446,7 +446,7 @@ section .title{
 .contact .contact-content .row .info .linkedIn{
     color: #fff;
 }
-.contact .contact-content .row .info .linkedIn:hover, .gmail:hover{
+.contact .contact-content .row .info .linkedIn:hover{
     color: #408000;
 }
 .contact .contact-content .row .info .gmail:hover{
