--- a/style.css
+++ b/style.css
@@ -38,8 +38,7 @@ section{
 .about, .projects, .certifications, .certificates , .skills, .contact, footer{
     font-family: 'Poppins', sans-serif;
 }
-.about .about-content, 
-.skills .skills-content{
+.about .about-content{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -215,9 +214,24 @@ section .title{
 .about .about-content .right p{
     text-align: justify;
 }
-
+.about .about-content .right a{
+    display: inline-block;
+    background: #408000;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px 30px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid #408000;
+    transition: all 0.3s ease;
+}
+.about .about-content .right a:hover{
+    color: #408000;
+    background: none;
+}
 /* projects section styling */
-.projects, .contact, .certificates{
+.projects{
     color:#fff;
     background: #1a1a1a;
 }
@@ -257,9 +271,120 @@ section .title{
     margin: 10px 0 7px 0;
 }
 
+/* experience section styling */
+.experience .title {
+    color:#1a1a1a;
+
+}
+.experience {
+    color:#f1f1f1;
+    background-color: #f1f1f1;
+
+}
+.experience .title::before{
+    background: #fff;
+}
+/* The actual timeline (the vertical ruler) */
+.experience-content .timeline {
+    position: relative;
+    margin: 0 auto;
+}
+  
+/* The actual timeline (the vertical ruler) */
+.experience-content .timeline::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    background-color: #222;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+}
+  
+/* Container around content */
+.experience-content .timeline .container {
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 50%;
+}
+  
+/* The circles on the timeline */
+.experience-content .timeline .container::after {
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    right: -17px;
+    background-color: #fff;
+    border: 4px solid #408000;
+    top: 15px;
+    border-radius: 50%;
+    z-index: 1;
+}
+  
+/* Place the container to the left */
+.experience-content .timeline .left {
+    left: 0;
+}
+  
+/* Place the container to the right */
+.experience-content .timeline .right {
+    left: 50%;
+}
+  
+/* Add arrows to the left container (pointing right) */
+.experience-content .timeline .left::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    right: 30px;
+    border: medium solid #222;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent #222;
+}
+  
+/* Add arrows to the right container (pointing left) */
+.experience-content .timeline .right::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    left: 30px;
+    border: medium solid #222;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent #222 transparent transparent;
+}
+  
+/* Fix the circle for containers on the right side */
+.experience-content .timeline .right::after {
+    left: -16px;
+}
+  
+/* The actual content */
+.experience-content .timeline .container .content {
+    padding: 20px 30px;
+    background-color: #222;
+    position: relative;
+    border-radius: 6px;
+    font-family: sans-serif;
+}
+.experience-content .timeline .container .content:hover {
+transform: scale(1.05);
+transition: all 0.3s ease;
+
+}
 /* certifications section styling */
 .certifications {
     justify-content: center;
+    background-color: #1a1a1a;
+    color: #fff;
 }
 .certifications .carousel .card{
     border-radius: 6px;
@@ -267,6 +392,7 @@ section .title{
     text-align: center;
     overflow: hidden;
     transition: all 0.3s ease;
+    background-color: #222;
 }
 .certifications .carousel .card .box{
     display: flex;
@@ -274,7 +400,7 @@ section .title{
     align-items: center;
     justify-content: center;
     transition: all 0.3s ease;
-    color: #222;
+    color: #fff;
 }
 .certifications .carousel .card img{
     height: 180px;
@@ -284,21 +410,25 @@ section .title{
     border: 4px solid #1a1a1a;
     transition: all 0.3s ease;
 }
+.certifications .carousel .card:hover {
+    background-color: #408000;
+}
 .certifications .carousel .card:hover img{
     border-color: #408000;
 }
 .certifications .carousel .card:hover .box{
     transform: scale(1.10);
 }
-.certifications .carousel .card .box .ViewVerify a{
-    color: #222;
+.certifications .carousel .card:hover .box .ViewVerify a{
+    background-color: #1a1a1a;
+    color: #fff;
 }
 .certifications .carousel .card .box .ViewVerify{
     display: flex;
     flex-direction: row;
 }
 .certifications .carousel .card .box .ViewVerify .view{
-    color: #222;
+    color: #1a1a1a;
     background-color: #408000;
     border-radius: 10%;
     padding: 1vh;
@@ -308,7 +438,7 @@ section .title{
     transform: scale(1.10);
 }
 .certifications .carousel .card .box .ViewVerify .verify{
-    color: #222;
+    color: #1a1a1a;
     background-color: #408000;
     border-radius: 10%;
     padding: 1vh;
@@ -347,8 +477,11 @@ section .title{
 }
 
 /* certificates section styling */
+.certificates{
+    background-color: #f1f1f1;
+}
 .certificates .carousel1 .card{
-    background: #222;
+    background: #fff;
     border-radius: 6px;
     padding: 25px 35px;
     text-align: center;
@@ -365,7 +498,7 @@ section .title{
     align-items: center;
     justify-content: center;
     transition: all 0.3s ease;
-    color: #fff;
+    color: #222;
 }
 .certificates .carousel1 .card:hover .box{
     transform: scale(1.05);
@@ -443,6 +576,11 @@ section .title{
 }
 
 /* skills section styling */
+.skills{
+    background-color: #1a1a1a;
+    color: #fff;
+}
+
 .skills .skills-content .columnSkills{
     width: 100%;
     justify-content: center;
@@ -468,7 +606,10 @@ section .title{
 
 
 /* contact section styling */
-
+.contact{
+    background-color: #fff;
+    color: #1a1a1a;
+}
 .contact .contact-content .column{
     width: 50%;
 }
@@ -513,11 +654,14 @@ section .title{
 .contact .contact-content .row .linkedIn{
     margin-right: 4px;
 }
+.contact .contact-content .row .skype{
+    margin-right: 4px;
+}
 .contact .contact-content .info .head{
     font-weight: 500;
 }
 .contact .contact-content .info .sub-title{
-    color: #fff;
+    color: #1a1a1a;
 }
 
 
@@ -534,7 +678,7 @@ section .title{
         padding: 0 50px;
     }
 }
-@media (max-width: 947px){
+@media screen and (max-width: 947px){
     .menu-btn{
         display: block;
         z-index: 999;
@@ -597,6 +741,41 @@ section .title{
         width: 100%;
         margin-bottom: 35px;
     }
+    /* Place the timelime to the left */
+   .experience-content .timeline::after {
+        left: 31px;
+    }
+    
+    /* Full-width containers */
+    .experience-content .timeline .container {
+        width: 100%;
+        padding-left: 70px;
+        padding-right: 25px;
+    }
+    
+    /* Make sure that all arrows are pointing leftwards */
+    .experience-content .timeline .container::before {
+        left: 60px;
+        border: medium solid #222;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent #222 transparent transparent;
+    }
+  
+    /* Make sure all circles are at the same spot */
+    .experience-content .timeline .left::after{
+        left: 15px;
+    }
+    .experience-content .timeline .right::after {
+        left: 15px;
+        }
+    
+    /* Make all right containers behave like the left ones */
+    .experience-content .timeline .right {
+        left: 0%;
+    }
+    .experience-content .timeline .container .content:hover {
+        transform: scale(1.08);
+        }
 }
 
 @media (max-width: 690px) {
@@ -638,4 +817,5 @@ section .title{
         font-size: 23px;
         line-height: 38px;
     }
+    
 }
